Fixed spacing of LeftPanel, changed panels' color to darkslategray

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -9,7 +9,7 @@
     border-color: black;
     border-style: solid;
     border-width: 1px 1px 0 1px;
-    background-color: #454545;
+    background-color: darkslategray;
 }
 
 #left-container {
@@ -19,7 +19,7 @@
     border-color: black;
     border-style: solid;
     border-width: 1px 0 1px 1px;
-    background-color: #454545;
+    background-color: darkslategray;
 }
 
 #grid-container {
